@@ -1257,20 +1257,30 @@ class Turba_Api extends Horde_Registry_Api
 
                         $email = new Horde_Mail_Rfc822_List();
 
+                        $display_name = ($ob->hasValue('name') || !isset($ob->driver->alternativeName))
+                            ? Turba::formatName($ob)
+                            : $ob->getValue($ob->driver->alternativeName);
+
                         foreach (array_keys($att) as $key) {
                             if ($ob->getValue($key) &&
                                 isset($attributes[$key]) &&
                                 ($attributes[$key]['type'] == 'email')) {
-                                // Multiple addresses support
-                                $email->add($rfc822->parseAddressList($ob->getValue($key), array(
-                                    'limit' => (isset($attributes[$key]['params']) && is_array($attributes[$key]['params']) && !empty($attributes[$key]['params']['allow_multi'])) ? 0 : 1
-                                )));
+                                $e_val = $ob->getValue($key);
+
+                                /* Bug #12480: Don't return email if it
+                                 * doesn't contain the search string, since
+                                 * an entry can contain multiple e-mail
+                                 * fields. Return all e-mails if it
+                                 * occurrs in the name. */
+                                if ((stripos($e_val, $name) !== false) ||
+                                    (stripos($display_name, $name) !== false)) {
+                                    // Multiple addresses support
+                                    $email->add($rfc822->parseAddressList($e_val, array(
+                                        'limit' => (isset($attributes[$key]['params']) && is_array($attributes[$key]['params']) && !empty($attributes[$key]['params']['allow_multi'])) ? 0 : 1
+                                    )));
+                                }
                             }
                         }
-
-                        $display_name = ($ob->hasValue('name') || !isset($ob->driver->alternativeName))
-                            ? Turba::formatName($ob)
-                            : $ob->getValue($ob->driver->alternativeName);
 
                         if (count($email)) {
                             foreach ($email as $val) {
