@@ -5,11 +5,13 @@ v4.3.0-git
 [jan] Support multi-value RDNs in LDAP DN attributes (horde@iotti.biz, Request
       #11889).
 
+
 ------
 v4.2.1
 ------
 
-=======
+[mms] Only include e-mail addresses that match the search string in the return
+      from the search() API call (Request #12480).
 [mjr] Fix exporting tags via vCard and ActiveSync (Bug #13393).
 [mjr] Add EAS client created shares to the sync_books preference (Bug #13359).
 [mjr] Add missing API support for searchTags API (Bug #13362).
